resources/styles/main.css
body {
	overflow: hidden;
	background-color: #111;
	color: #fff;
}

#editor {
	margin: 0;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	
	/*font-family: inconsolata, sans-serif;*/
	/*font-family: source-code-pro, sans-serif;
	font-weight: 300;
	font-style: normal;*/
}

.label-right-justify {
	text-align:right;
}

.control-panel {
	display: none;
	background-color: #fff;
	margin: 0;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	padding: 25px;
	color: #000;
}

.notification {
	display: none;
	position: absolute;
	float: right;
	top: 5px;
	right: 5px;
	border: 2px solid red;
	font-size: 24px;
	font-weight: bold;
	text-align: center;
	background-color: #fff;
	color: #000;
	z-index: 100;
	padding: 5px;
	-webkit-border-radius: 10px;
}

